--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -131,6 +131,8 @@ parameters:
     admin_vpn_ip: 210.175.54.14
     admin_ele_ip: 112.65.174.206
     admin_un_ip: 180.169.71.34
+    wenwen_dev_ip: 54.251.246.14
+    wenwen_prod_ip: 54.254.98.246
     upload_banner_dir: images/banner/
     upload_adver_dir: images/actionPic/
     upload_tmp_dir: uploads/user/
