try to get cache_data size

--- a/src/Jili/EmarBundle/Resources/config/routing.yml
+++ b/src/Jili/EmarBundle/Resources/config/routing.yml
@@ -42,6 +42,10 @@ emar-admin-emarwebsitescroned:
     resource: "@JiliEmarBundle/Controller/AdminEmarWebsitesCronedController.php"
     type:     annotation
 
+emar-admin-cachepanel:
+    resource: "@JiliEmarBundle/Controller/AdminCachePanelController.php"
+    type:     annotation
+
 emar-default:
     resource: "@JiliEmarBundle/Controller/DefaultController.php"
     type:     annotation
