--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -50,7 +50,9 @@ twig:
         rt_of_search_form: %emar_com.rt_of_search_form.name% # {commodity :0, shop: 1}
 
         offer99_com:
-            pid: %offer99_com.pid%  
+            pid: %offer99_com.pid%
+
+        cps_rebate_type: %cps_rebate_type%
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
@@ -241,4 +243,3 @@ parameters:
     91wenwen_api_url: https://www.91jili.com
     is_from_wenwen_register: 2
     file_path_admin_point_manage: /data/91jili/logs/admin/pointManage
-    cps_default_rebate: 70
