对应 issue #391 7月份活动
分支：branch_july_activity

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -243,3 +243,4 @@ parameters:
     91wenwen_api_url: https://www.91jili.com
     is_from_wenwen_register: 2
     file_path_admin_point_manage: /data/91jili/logs/admin/pointManage
+    file_path_july_activity: /data/91jili/logs/activity/july.csv
