--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -21,7 +21,9 @@ swiftmailer:
 
 doctrine:
     dbal:
-        host:     192.168.1.15 
-        dbname:   jili_test_0710 
-        password:  MyNewPassword
-
+       host:     127.0.0.1
+       dbname:   jili_test_0710 
+       password:  MyNewPassword
+       charset:  UTF8
+#       host:     192.168.1.15 
+#       dbname:   jili_test_0710 
