--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -17,3 +17,10 @@ swiftmailer:
     spool:
         type: file
         path: %kernel.root_dir%/cache/%kernel.environment%/swiftmailer.emails
+
+doctrine:
+    dbal:
+        host:     192.168.1.15
+        dbname:   jili_test_0721
+        user:     root 
+        password: MyNewPassword
