--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "jms/di-extra-bundle": "1.3.*",
      	"knplabs/knp-paginator-bundle": "dev-master",
         "gregwar/captcha-bundle": "dev-master",
-        "raulfraile/ladybug-bundle": "~1.0"
+        "raulfraile/ladybug-bundle": "~1.0",
+        "fabpot/php-cs-fixer": "0.5.4"
     },
     "scripts": {
         "post-install-cmd": [
