--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -119,11 +119,33 @@ services:
         class: Knp\Component\Pager\Event\Subscriber\Sortable\SortableSubscriber
         tags:
             - { name: knp_paginator.subscriber }
+monolog:
+    handlers:
+        main:
+            type: fingers_crossed
+            action_level: error
+            handler: nested
+            channels: [!user_source]
+            
+        user_source:
+            type: stream
+            path: %kernel.logs_dir%/%kernel.environment%.user_source.log
+            level: info 
+            formatter: monolog.formatter.session_request
+            channels: [user_source]
+     
+        nested:
+            type:  stream
+            path:  %kernel.logs_dir%/%kernel.environment%.log
+            level: debug
+
 gregwar_captcha:
         width: 100
         height: 35
         length: 4
         as_url: true
+    
+
 
 parameters:
     emar_com.app_AppKey: %emar_com.cron.AppKey% 
