--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -25,3 +25,23 @@ doctrine:
        charset:  UTF8
        host:     192.168.1.12 
        dbname:   jili_test_0721 
+
+monolog:
+    handlers:
+        main:
+            type: fingers_crossed
+            action_level: error
+            handler: nested
+            channels: [!user_source]
+            
+        user_source:
+            type: stream
+            path: %kernel.logs_dir%/%kernel.environment%.user_source.log
+            level: info 
+            formatter: monolog.formatter.session_request
+            channels: [user_source]
+     
+        nested:
+            type:  stream
+            path:  %kernel.logs_dir%/%kernel.environment%.log
+            level: debug
