--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -23,5 +23,5 @@ doctrine:
     dbal:
        password:  MyNewPassword
        charset:  UTF8
-       host:     192.168.1.15 
+       host:    localhost 
        dbname:   jili_test_0721 
