#396 init cookie when redirect before js seting the cookie

--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -53,6 +53,7 @@ services:
         arguments: []
         calls:
             - [ setLogger, [ @logger ] ] 
+            - [ setRouter, [ @router] ] 
             - [ setEntityManager, [ @doctrine.orm.entity_manager ] ] 
             - [ setSession, [ @session ] ] 
             - [ setUserSourceLogger, [ @monolog.logger.user_source ] ] 
