#396 fixed problems on release review

--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -1,6 +1,7 @@
 parameters:
 # user related
     login.listener.class: Jili\ApiBundle\EventListener\LoginListener
+    user_manager.class: Jili\ApiBundle\Services\User\UserManager
     soap.mail.listener.class: Jili\ApiBundle\EventListener\SoapMailListener
     user_sign_up_route.class: Jili\ApiBundle\Services\UserSignUpTracer
     user_source.logger.class: Jili\ApiBundle\Services\Logger\UserSourceLogger
@@ -42,6 +43,11 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
             - [setTaskList, [ @session.task_list ]]
+    user_manager:
+        class: %user_manager.class%
+        calls:
+            - [ setLogger, [ @logger ] ] 
+            - [ setEntityManager, [ @doctrine.orm.entity_manager ] ] 
 
     soap.mail.listener:
         class: %soap.mail.listener.class%
@@ -53,10 +59,9 @@ services:
         arguments: []
         calls:
             - [ setLogger, [ @logger ] ] 
-            - [ setRouter, [ @router] ] 
-            - [ setEntityManager, [ @doctrine.orm.entity_manager ] ] 
             - [ setSession, [ @session ] ] 
             - [ setUserSourceLogger, [ @monolog.logger.user_source ] ] 
+            - [ setUserManager, [ @user_manager ] ] 
 
     user_source.logger:
         class: %user_source.logger.class%
