--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+jili_frontend:
+    resource: "@JiliFrontendBundle/Controller/"
+    type:     annotation
+    prefix:   /
 _login:
     path: /login
     defaults: { _controller: JiliApiBundle:User:login}
@@ -10,7 +14,7 @@ _logout:
 
 _homepage:
     path: /
-    defaults: { _controller: JiliApiBundle:Top:index }
+    defaults: { _controller: JiliFrontendBundle:Home:index }
     schemes:  [http]
 
 jili_api:
