首页 体验广告 #420

--- a/src/Jili/ApiBundle/Resources/config/cache.yml
+++ b/src/Jili/ApiBundle/Resources/config/cache.yml
@@ -2,6 +2,9 @@ parameters:
 # advertiseBanner 
     cache_config.api.top_adbanner.key: 'api.top_adbanner'
     cache_config.api.top_adbanner.duration: 3600 #unit seconds
+# topAdExperience 
+    cache_config.api.top_adExperience.key: 'api.top_adExperience'
+    cache_config.api.top_adExperience.duration: 3600 #unit seconds
 # market 
     cache_config.api.top_market.key: 'api.top_market'
     cache_config.api.top_market.duration: 3600 #unit seconds
