--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -124,3 +124,4 @@ parameters:
         'order': 2 #每个订单XX元
         'sale': 3 #销售额的XX%
     point_exchange_upper_limit: 2000 #积分兑换上限
+    wenwen_vote_url: http://www.91wenwen.net/vote/?c=91jili#active
