体验广告后台管理

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -155,6 +155,7 @@ parameters:
     upload_adver_dir: images/actionPic/
     upload_tmp_dir: uploads/user/
     upload_activity_dir: images/activity/
+    upload_experience_advertisement_dir: images/experience_advertisement/
     page_num: 10
     init: 0
     init_one: 1
