--- a/app/config/custom_parameters.yml
+++ b/app/config/custom_parameters.yml
@@ -246,4 +246,4 @@ parameters:
     is_from_wenwen_register: 2
     file_path_admin_point_manage: /data/91jili/logs/admin/pointManage
     file_path_wenwen_vote: /data/91jili/logs/wenwen/vote.json
-    file_path_cpa_ranking_activity: /data/91jili/logs/activity/cpa_ranking_activity.csv
+    file_path_cpa_ranking_activity: /data/91jili/logs/activity/cpa_ranking_activity
