--- a/src/Jili/BackendBundle/Resources/config/routing.yml
+++ b/src/Jili/BackendBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ analog-chinanet:
 rebate-activity:
     resource: "@JiliBackendBundle/Controller/RebateActivityController.php"
     type:     annotation
+
+edm-unsubscribe:
+    resource: "@JiliBackendBundle/Controller/EdmUnsubscribeController.php"
+    type:     annotation
