--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "jms/di-extra-bundle": "1.3.*",
      	"knplabs/knp-paginator-bundle": "dev-master",
         "gregwar/captcha-bundle": "dev-master",
-        "raulfraile/ladybug-bundle": "~1.0",
+        "friendsofsymfony/jsrouting-bundle": "@stable",
         "fabpot/php-cs-fixer": "0.5.4",
-         "pdepend/pdepend" : "1.1.0"
+        "pdepend/pdepend" : "1.1.0"
     },
     "scripts": {
         "post-install-cmd": [
