--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -29,3 +29,10 @@ assetic:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+
+#doctrine:
+#    dbal:
+#       password:  MyNewPassword
+#       charset:  UTF8
+#       host:     localhost
+#       dbname:   jili_0904
