--- a/app/config/custom_parameters.yml
+++ b/app/config/custom_parameters.yml
@@ -249,8 +249,9 @@ parameters:
     file_path_wenwen_vote: /data/91jili/logs/wenwen/vote.json
     file_path_cpa_ranking_activity: /data/91jili/logs/activity/cpa_ranking_activity
     
-    qq_appid: 101155200
-    qq_appkey: 8e7855dd98467323249526c607621260
+    qq_appid: 101163684
+    qq_appkey: fe7b1879a8e220136aa63ae92a9e5745
+    qq_email_suffix: qq.com
     callback_url: http://www.91jili.com/qq_callback/
     scope: get_user_info
 
