--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -21,7 +21,7 @@ swiftmailer:
 
 doctrine:
     dbal:
-       dbname:   jili_test_1028
-       password:  MyNewPassword
-       charset:  UTF8
-       host:     192.168.1.52
+       dbname:   jili_test
+#       password:  MyNewPassword
+#       charset:  UTF8
+#       host:     192.168.1.52
