--- a/makefile.txt
+++ b/makefile.txt
@@ -4,3 +4,10 @@ test:
 
 assets-rebuild:
 	php ./app/console assets:install web --symlink --relative
+
+deploy-js-routing: assets-rebuild
+	./app/console	fos:js-routing:dump
+
+deploy: deploy-js-routing
+	@echo done
+
