--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -33,3 +33,10 @@ assetic:
 parameters:
 #91wenwen和91jili账号关联secret key
     91wewen_bind_secret_key: %91wewen_bind_secret_key_dev%
+
+doctrine:
+    dbal:
+       dbname:   jili_1117
+       password:  MyNewPassword
+       charset:  UTF8
+       host:     192.168.1.28
