--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -22,6 +22,6 @@ swiftmailer:
 doctrine:
     dbal:
        dbname:   jili_test
-#       password:  MyNewPassword
-#       charset:  UTF8
-#       host:     192.168.1.52
+       password:  MyNewPassword
+       charset:  UTF8
+       host:     localhost
