--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -36,7 +36,7 @@ parameters:
 
 doctrine:
     dbal:
-       host:    localhost 
+       host:     192.168.1.18 #localhost
        dbname:   jili_0904
        password:  MyNewPassword
        charset:  UTF8
